jilles      2006/11/18 14:03:53 UTC	(20061118-7207)
  Log:
  Allow other values for chanserv::trigger than '!', '@' or '.',
  by removing the check for those in command processing.
  That check is no longer needed as chanserv now checks the
  first character before engaging in lengthy processing.
  

  Changes:	Modified:
  +0 -6		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/18 14:02:11 UTC	(20061118-7205)
  Log:
  Mention fantasy commands in /cs help.
  

  Changes:	Modified:
  +7 -0		trunk/modules/chanserv/help.c (File Modified) 


jilles      2006/11/18 13:48:55 UTC	(20061118-7203)
  Log:
  Change /cs why to work in a more sane way with flags.
  

  Changes:	Modified:
  +20 -30	trunk/modules/chanserv/why.c (File Modified) 


nenolod     2006/11/18 05:27:38 UTC	(20061118-7201)
  Log:
  - show GUARD in /cs info if enabled
  

  Changes:	Modified:
  +8 -0		trunk/modules/chanserv/info.c (File Modified) 


nenolod     2006/11/18 05:10:57 UTC	(20061118-7199)
  Log:
  Make ChanServ inhabitation optional:
  - Adds a new CFLAG, "guard", which determines whether ChanServ
    occupies the channel.
  - Changes the symantics of options::join_chans (now only enables
    SET GUARD)
  - Add guard to default CFLAGS.
  - Bump database revision so that the old rules are converted.
  - Chase updates in module-land, so that nothing gets too broken by
    this change.
  

  Changes:	Modified:
  +5 -2		trunk/backend/flatfile.c (File Modified) 
  +2 -2		trunk/contrib/cs_sync.c (File Modified) 
  +13 -7	trunk/dist/example.conf (File Modified) 
  +1 -0		trunk/include/account.h (File Modified) 
  +1 -1		trunk/modules/chanserv/clear_users.c (File Modified) 
  +14 -11	trunk/modules/chanserv/main.c (File Modified) 
  +74 -0	trunk/modules/chanserv/set.c (File Modified) 
  +2 -2		trunk/modules/nickserv/identify.c (File Modified) 
  +1 -0		trunk/src/conf.c (File Modified) 


nenolod     2006/11/18 04:03:22 UTC	(20061118-7197)
  Log: